--- a/src/index.css
+++ b/src/index.css
@@ -78,3 +78,96 @@
   @apply h-[315px] w-[193px] md:w-[175px] md:h-[312.5px] lg:h-[260px] lg:w-full xl:w-full xl:h-[325px]  rounded-lg shadow-xl;
   color: rgb(35, 82, 124);
 }
+@media (min-height: 1024px) {
+  .responsive-item {
+    /* height: 100vh; Chiều cao cố định của container */
+    overflow: hidden; /* Ngăn chặn tràn bề ngoài container */
+  }
+}
+/* sectionTitle button */
+.sectionTitle-custom {
+  background: linear-gradient(to right, rgb(255, 138, 0), rgb(255, 32, 112));
+  background-clip: text;
+  -webkit-background-clip: text; /* Hỗ trợ cho các trình duyệt dựa trên webkit */
+  color: transparent; /* Biến chữ thành trong suốt */
+  font-size: 15px;
+  font-weight: 700;
+  padding: 13px 0px;
+  line-height: 11px;
+  border-image: linear-gradient(to right, rgb(255, 138, 0), rgb(255, 32, 112));
+  border-image-slice: 1;
+}
+.sectionTitle-button {
+  width: 30%;
+  text-align: right;
+  margin: 5px 0;
+  padding: 4px 12px;
+  border-radius: 20px;
+  color: #ffffff;
+  float: right;
+  font-size: 13px;
+  line-height: 20.8px;
+}
+/* cardItem custom  */
+.cardItem-qualang {
+  top: 3px;
+  left: 3px;
+  background: #a94442;
+  z-index: 1;
+  background-image: linear-gradient(to right, #ff00cc 0%, #333399 51%, #ff00cc 100%);
+  background-size: 200% 100%;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 8px;
+  transition: 0.7s;
+  padding: 3px 6px;
+  position: absolute;
+  color: white;
+  text-align: center;
+  line-height: 1.6;
+  font-size: 11px;
+}
+.cardItem-qualang::after {
+  content: '';
+  border: 4px solid transparent;
+  border-bottom: 4px solid #5f0e0c;
+  transform: rotate(44deg);
+  position: absolute;
+  bottom: -4px;
+  left: 2px;
+  z-index: 9999999;
+}
+.addOn-custom {
+  position: absolute;
+  right: 2px;
+  bottom: 3px;
+  background: rgb(71, 132, 19);
+  color: white;
+  padding: 3px 5px 1px;
+  z-index: 9;
+  background-image: linear-gradient(to right, #c02425 0%, #f0cb35 51%, #c02425 100%);
+  /* background-position: 50% 100%; */
+  background-size: 200% 100%;
+  transition: 0.7s;
+  text-transform: capitalize;
+  text-align: center;
+  font-size: 11px;
+  border-radius: 2px;
+  line-height: 17.6px;
+}
+/* rightbar custom */
+.rightbar-custom {
+  display: flex;
+  clear: both;
+  padding-right: 10px;
+  line-height: 15.6px;
+  overflow: hidden;
+  background: rgb(11, 15, 21);
+  background-size: 200% 100%;
+  background-image: linear-gradient(to right, rgb(21, 29, 37) 0%, rgba(17, 21, 21, 0) 51%, rgb(6, 8, 8) 50%);
+  border-bottom: 1px solid #1e2732 !important;
+  color: white;
+  font-size: 11.5px;
+  transition-duration: 0.3s;
+  gap: 10px;
+}
