--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,40 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+/* Tùy chỉnh thanh cuộn cho toàn bộ trang */
+html, body {
+  overflow: auto; /* Đảm bảo rằng trang có thể cuộn */
+}
+
+/* Thanh cuộn */
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 12px; /* Chiều rộng của thanh cuộn dọc */
+  height: 12px; /* Chiều cao của thanh cuộn ngang */
+}
+
+/* Track của thanh cuộn */
+html::-webkit-scrollbar-track,
+body::-webkit-scrollbar-track {
+  background: #1e2732; /* Màu nền của track */
+}
+
+/* Thumb của thanh cuộn */
+html::-webkit-scrollbar-thumb,
+body::-webkit-scrollbar-thumb {
+  background-color: #3b6080; /* Màu của thumb */
+  border-radius: 10px; /* Bo tròn góc */
+  border: 3px solid #1e2732; /* Đường viền xung quanh thumb */
+}
+
+/* Hover effect cho thumb */
+html::-webkit-scrollbar-thumb:hover,
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #b83826; /* Màu của thumb khi hover */
+}
+
+
+/* -------------------------------------------------------------------------- */
 .custom-page {
   @apply mx-auto max-w-7xl px-4 sm:px-6 lg:px-8;
 }
@@ -275,8 +309,28 @@ body {
   box-shadow: 0 4px 15px 0 rgba(229, 66, 10, 0.75);
   background-size: 300% 100%;
 }
-/* .button-two::selection {
-  background: #fd9dff;
-  color: #fff;
-  text-shadow: none;
-} */
+/* table link */
+.scroll-bar-custom {
+  width: 100%;
+}
+.scroll-bar-custom::-webkit-scrollbar {
+  height: 12px; /* Chiều cao của thanh cuộn ngang */
+  width: 12px; /* Chiều rộng của thanh cuộn dọc */
+}
+
+/* Track của thanh cuộn */
+.scroll-bar-custom::-webkit-scrollbar-track {
+  background: #1e2732; /* Màu nền của track */
+}
+
+/* Thumb của thanh cuộn */
+.scroll-bar-custom::-webkit-scrollbar-thumb {
+  background-color: #3b6080; /* Màu của thumb */
+  border-radius: 10px; /* Bo tròn góc */
+  border: 3px solid #1e2732; /* Đường viền xung quanh thumb */
+}
+
+/* Hover effect cho thumb */
+.scroll-bar-custom::-webkit-scrollbar-thumb:hover {
+  background-color: #b83826; /* Màu của thumb khi hover */
+}
