--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 /* Tùy chỉnh thanh cuộn cho toàn bộ trang */
-html, body {
+html,
+body {
   overflow: auto; /* Đảm bảo rằng trang có thể cuộn */
 }
 
@@ -38,7 +39,6 @@ html::-webkit-scrollbar-thumb:hover,
 body::-webkit-scrollbar-thumb:hover {
   background-color: #b83826; /* Màu của thumb khi hover */
 }
-
 
 /* -------------------------------------------------------------------------- */
 .custom-page {
@@ -90,6 +90,13 @@ body::-webkit-scrollbar-thumb:hover {
 
   display: -webkit-box !important;
   -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.tw-multiline-ellipsis-1 {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-flex: 1;
   -webkit-box-orient: vertical;
 }
 /* Banner Slider */
@@ -335,7 +342,7 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: #b83826; /* Màu của thumb khi hover */
 }
 /* movieWatchBox */
-.plyr{
+.plyr {
   --plyr-color-main: #df6725;
   --plyr-control-icon-size: 18px;
 }
