--- a/src/index.css
+++ b/src/index.css
@@ -346,3 +346,58 @@ body::-webkit-scrollbar-thumb:hover {
   --plyr-color-main: #df6725;
   --plyr-control-icon-size: 18px;
 }
+
+/* dropdown */
+
+.dropdown {
+  /* Outermost container for the dropdown */
+  position: relative;
+  display: inline-block; /* Allows inline display for better positioning */
+}
+
+.dropdown button {
+  /* Style for the dropdown button */
+  background-color: transparent; /* Remove default background color */
+  border: none; /* Remove default border */
+  cursor: pointer; /* Indicate clickable behavior */
+  display: flex; /* Allow alignment of text and icon */
+  align-items: center; /* Align content vertically */
+  justify-content: space-between; /* Space between text and icon */
+}
+
+.dropdown button span {
+  /* Style for the dropdown label text */
+  font-weight: normal; /* Adjust font weight for readability */
+}
+
+.dropdown-content {
+ 
+  background-color: #1f3d58; /* Black background */
+  color: #fff; /* White text color */
+  list-style: none; /* Remove default list styling */
+  padding: 0; /* Remove default padding */
+  
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  z-index: 10; /* Ensure dropdown is above other elements */
+  opacity: 0; /* Initially hidden */
+  visibility: hidden; /* Initially hidden */
+  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out; /* Smooth transition */
+}
+
+.dropdown:hover .dropdown-content {
+  /* Show dropdown content on hover */
+  opacity: 1;
+  visibility: visible;
+}
+
+.dropdown-content li {
+  /* Style for individual dropdown items */
+  padding: 0.5rem 1rem; /* Adjust padding as needed */
+  cursor: pointer; /* Indicate clickable behavior */
+  transition: background-color 0.2s ease-in-out; /* Smooth hover effect */
+}
+
+.dropdown-content li:hover {
+  /* Style for hover on individual items */
+  background-color: #212121; /* Slightly darker background on hover */
+}
