--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,21 @@ body::-webkit-scrollbar-thumb:hover {
 .shadow-custom {
   box-shadow: rgb(22, 29, 35) 0px 5px 10px -1px;
 }
+.dropdown {
+  position: relative;
+}
+
+.dropdown::before {
+  content: '';
+  position: absolute;
+  top: -10px; /* Điều chỉnh vị trí của mũi tên */
+  left: 10px; /* Điều chỉnh vị trí của mũi tên */
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 5px solid #1f3d58; /* Màu của mũi tên */
+}
 
 /* phim yeu thich */
 .custom-bg2 {
@@ -371,12 +386,11 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .dropdown-content {
- 
   background-color: #1f3d58; /* Black background */
   color: #fff; /* White text color */
   list-style: none; /* Remove default list styling */
   padding: 0; /* Remove default padding */
-  
+
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2); /* Subtle shadow */
   z-index: 10; /* Ensure dropdown is above other elements */
   opacity: 0; /* Initially hidden */
