--- a/src/components/MainLayOut/index.css
+++ b/src/components/MainLayOut/index.css
@@ -134,18 +134,18 @@
   min-height: 100vh;
   width: 100%;
 }
-.sidebar .ant-menu-sub::-webkit-scrollbar {
-  height: 12px; /* Chiều cao của thanh cuộn ngang */
-  width: 8px; /* Chiều rộng của thanh cuộn dọc */
+/* .sidebar .ant-menu-sub::-webkit-scrollbar {
+  height: 12px;
+  width: 8px; 
 }
 .sidebar .ant-menu-sub::-webkit-scrollbar-track {
-  background: #1e2732; /* Màu nền của track */
+  background: #1e2732; 
 }
 .sidebar .ant-menu-sub::-webkit-scrollbar-thumb {
-  background-color: #3b6080; /* Màu của thumb */
-  border-radius: 10px; /* Bo tròn góc */
-  border: 3px solid #1e2732; /* Đường viền xung quanh thumb */
-}
+  background-color: #3b6080;
+  border-radius: 10px; 
+  border: 3px solid #1e2732;
+} */
 
 
 .sidebar .ant-menu-submenu-popup {
