--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ body::-webkit-scrollbar-thumb:hover {
   /* Bổ sung display: inline-block để đảm bảo dropdown nằm trong dòng */
 }
 .dropdown:hover::after {
-  content: "";
+  content: '';
   border-bottom: 8px solid #1f3d58;
   border-left: 8px solid transparent;
   z-index: 999;
@@ -70,9 +70,7 @@ body::-webkit-scrollbar-thumb:hover {
   bottom: 0;
   left: 37px;
   position: absolute;
- 
 }
-
 
 /* phim yeu thich */
 .custom-bg2 {
@@ -362,8 +360,32 @@ body::-webkit-scrollbar-thumb:hover {
 }
 /* movieWatchBox */
 .plyr {
+  overflow: hidden;
+
   --plyr-color-main: #df6725;
-  --plyr-control-icon-size: 18px;
+  --plyr-border-radius: 10px;
+  /* --plyr-control-spacing: 15px; */
+  /* --plyr-control-icon-size: 12px; */
+}
+
+/* movieBox */
+
+/* CSS cho Default Layout dựa trên PlyrLayout */
+
+.seek-button {
+  background: none;
+  border: none;
+  /* padding: 4px; */
+  cursor: pointer;
+  color: white;
+  /* font-size: 30px; */
+  transition: transform 0.2s ease;
+}
+
+.seek-button:hover {
+  transform: scale(1.2);
+  background: #df6725;
+  border-radius: 10%;
 }
 
 /* dropdown */
@@ -418,25 +440,4 @@ body::-webkit-scrollbar-thumb:hover {
 .dropdown-content li:hover {
   /* Style for hover on individual items */
   background-color: #212121; /* Slightly darker background on hover */
-}
-
-
-/* movieBox */
-
-/* CSS cho Default Layout dựa trên PlyrLayout */
-
-.seek-button {
-  background: none;
-  border: none;
-  padding: 4px;
-  cursor: pointer;
-  color: white;
-  /* font-size: 30px; */
-  transition: transform 0.2s ease;
-}
-
-.seek-button:hover {
-  /* transform: scale(1.2); */
-  background: #df6725;
-  border-radius: 10%;
 }
