--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,8 @@ body::-webkit-scrollbar-thumb:hover {
   padding: 8px;
   background-color: #12171b6e;
   font-weight: 500;
-  color: rgba(8, 102, 170, 1);
+  color: rgb(6, 197, 255);
+  text-shadow: #25aae1
 }
 
 .search-container .loading {
@@ -116,11 +117,11 @@ body::-webkit-scrollbar-thumb:hover {
   margin-top: 5px;
   z-index: 10;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  max-height: 300px;
+  /* max-height: 350px; */
   overflow-y: auto;
 }
 
-.search-container ul li {
+/* .search-container ul li {
   padding: 8px 12px;
   border-bottom: 1px solid #333;
 }
@@ -137,7 +138,7 @@ body::-webkit-scrollbar-thumb:hover {
 
 .search-container ul li a:hover {
   background-color: #a36810;
-}
+} */
 /* phim yeu thich */
 .custom-bg2 {
   background-image: linear-gradient(to right, rgb(6, 52, 88), rgb(28, 94, 148));
