--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
+/* responsive cho các trang */
+.responsive-edit {
+  @apply min-[540px]:px-12 min-[712px]:px-8 md:px-0 min-[820px]:px-2 min-[853px]:px-6 min-[912px]:px-16 lg:px-0;
+}
 /* Tùy chỉnh thanh cuộn cho toàn bộ trang */
 html,
 body {
@@ -84,7 +89,7 @@ body::-webkit-scrollbar-thumb:hover {
   background-color: #12171b6e;
   font-weight: 500;
   color: rgb(6, 197, 255);
-  text-shadow: #25aae1
+  text-shadow: #25aae1;
 }
 
 .search-container .loading {
